--- a/css/kanban.css
+++ b/css/kanban.css
@@ -36,6 +36,7 @@ body {
 	font-size: 13px;
 	line-height: 19px;
 	margin: 8px 12px 8px 12px;
+	word-wrap: break-word;
 }
 
 .cardHolder {
@@ -80,6 +81,7 @@ body {
 	margin-left: 12px;
 	margin-right: 12px;
 	flex-shrink: 0;
+	word-wrap: break-word;
 }
 
 .fakecard {
